[gd_scene load_steps=5 format=3 uid="uid://chtvgyugi6onh"]

[ext_resource type="Texture2D" uid="uid://dlmqmynnd4jtg" path="res://Assets/TitleCAAARD_TEST_B.png" id="1_4r4wi"]
[ext_resource type="Script" path="res://Main/MainMenu.gd" id="1_aqhaj"]
[ext_resource type="Theme" uid="uid://c127lo03d7ash" path="res://Assets/new_theme.tres" id="3_6wwhn"]
[ext_resource type="PackedScene" uid="uid://bc857vsq0elgh" path="res://Scenes/Menus/settings_panel_container.tscn" id="4_pvg4t"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_aqhaj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SettingsPanelContainer" parent="CanvasLayer" instance=ExtResource("4_pvg4t")]
visible = false

[node name="MenuButtonContainer" type="HBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.792
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = -85.0
offset_top = -32.0
offset_right = 85.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_6wwhn")

[node name="StartButton" type="Button" parent="CanvasLayer/MenuButtonContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Start"

[node name="Spacer" type="Control" parent="CanvasLayer/MenuButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsButton" type="Button" parent="CanvasLayer/MenuButtonContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CanvasLayer/MenuButtonContainer"]
layout_mode = 2
text = "Quit
"

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(575, 323)
scale = Vector2(0.315, 0.315)
texture = ExtResource("1_4r4wi")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(571, 324)

[connection signal="pressed" from="CanvasLayer/MenuButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
